# dagster-k8s-deployment

./: .gitignore  Analysis.md  README.md
.github/workflows/: build-gldas.yaml
cli/: INSTALL.md  README.md  pyproject.toml
cli/dagster_bench/: __init__.py  analyze_core.py  cli.py  client.py  measure_core.py  utils.py
dagster/: dagster-ingress.yaml  dagster-ingress.yml  secrets.yaml.enc  upgrade.sh  values.yaml
src/gldas_noah/: Dockerfile  build.sh  pyproject.toml  setup.cfg  setup.py
src/gldas_noah/gldas_noah/: assets.py
src/gldas_noah/gldas_noah_tests/: test_assets.py
src/simple_repo/: Dockerfile  build.sh  dagster_code.py  pyproject.toml
