[project]
name = "dagster-bench"
version = "0.1.0"
description = "Performance benchmarking tool for Dagster"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Hesam Korki", email = "hesam.korki@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.scripts]
bench = "dagster_bench.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dagster_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

