[project]
name = "dagster-huge-assets"
version = "0.1.0"
description = "A simple Dagster code location for testing performance with large numbers of assets"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.8.9",
    "dagster-webserver>=1.8.9",
    "dagster-postgres>=0.24.9",
    "dagster-docker>=0.24.9",
    "dagster-graphql>=1.8.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["dagster_code.py"]

[tool.uv]
dev-dependencies = []

